src/objects/Relocation__c.object
<CustomObject>
    <fields>
        <fullName>Hardware__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Hardware</label>
        <referenceTo>Hardware__c</referenceTo>
        <relationshipLabel>Relocations</relationshipLabel>
        <relationshipName>Relocations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NewLocation__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>NewLocation</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Relocations (NewLocation)</relationshipLabel>
        <relationshipName>Relocations1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OldLocation__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>OldLocation</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Relocations</relationshipLabel>
        <relationshipName>Relocations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Relocation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Relocation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>